--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a class="navbar-brand" href="#">
               <img src="assets/img/viajes.svg" alt="Bootstrap" width="60" height="55">Viajes Chile</a>
         </div>
+        <!--uso de bootstraps para el navbar-->
         <div class="container-fluid">          
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
