carrusel con 3 imagenes

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <!--hero section-->
     <header>
+      <!--el carrusel lleva 3 imagenes-->
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
