--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <h1 class="text-center text-white fw-bold">¿QUIENES SOMOS?</h1>
         </div>
 
+        <!--aca se utilizan iconos de googlefontawesome-->
+
         <div class="row my-5 text-white">
 
             <div class="col-md-4 text-center">
@@ -138,6 +140,8 @@
       <div>
         <h1 class="display-4 fw-bold text-center text-white my-5 py-5">DESTACADOS</h1>
       </div>
+
+      <!--aca ingresan las cards de bootstraps-->
     
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
